Ecommerce Api RestAssured added successfully